# myscripts

./: LICENSE  README.md  pyproject.toml  setup.cfg
myscripts/: __init__.py
myscripts/scripts/: __init__.py  lammps_param_sweep.py  make_param_combos.py  plotting.py  tdep_convergence.py  tdep_from_lammps.py
myscripts/src/: LAMMPS_Job.py  LAMMPS_Project.py  __init__.py
myscripts/src/FileIO/: InFile.py  LogFile.py  __init__.py
myscripts/src/FileIO/ParsingStrategies/: AbstractParsingStrategy.py  FixPrintParser.py  __init__.py
myscripts/src/PostProcess/: correlation.py  estimation.py
