[metadata]
name = myscripts
version = 0.0.1
author = "Ethan Meitz"
url = "https://github.com/ejmeitz/myscripts"
description = "My python tools for generating MD data and analyzing it."
license = "MIT License"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
	matplotlib >= 3.0
	typer >= 0.4
	numpy >= 1.11
	rich >= 1.0
	scipy >= 1.5
	pandas >= 1.0
	toml >= 0.10.1
	pandas >= 2.0

[options.packages.find]
include =
	myscripts
	myscripts.*

# [options.entry_points]
# console_scripts =
# 	make_param_combos = myscripts.scripts.make_param_combos:app
# 	lammps_param_sweep = myscripts.scripts.lammps_param_sweep:app
# 	tdep_from_lammps = myscripts.scripts.tdep_from_lammps:app
	